<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/margin_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewAppName"
            style="@style/PrimaryText.Medium.20.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/application_display_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            style="@style/FormTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:hint="@string/login_email_text"
            android:theme="@style/FormTextFieldStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAppName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                style="@style/FormEditTexStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            style="@style/FormTextFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:hint="@string/login_password_text"
            android:theme="@style/FormTextFieldStyle"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/FormEditTexStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="@style/PrimaryMaterialButton"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:text="@string/login_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword" />


        <com.google.android.material.textview.MaterialTextView
            style="@style/PrimaryText.Medium.14.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:gravity="center"
            android:paddingStart="@dimen/padding_20dp"
            android:paddingEnd="@dimen/padding_20dp"
            android:text="@string/login_info_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>